# jami-client-qt

./: .clang-format  .clang-tidy  .cqfdrc  .dockerignore  .gitignore  .gitmodules  .gitreview  .qmlformat.ini  .qmlls.ini  AGENTS.md  CMakeLists.txt  CMakePresets.json  INSTALL.md  License.rtf  NEWLINKDEVICE.md  README.md  add_scanner_to_cmake.md  build.py  changelog.md  compile_tests.sh  copy-runtime-files.ps1  copy-runtime-files.py  debugging.md  flake.nix  gen-resources.py  ico.rc  jami-qt.appdata.xml  jami-qt.desktop  jami-qt.desktop.autostart  jami-qt.pro  jami-qt.sln  jami.desktop  jami.desktop.autostart  jami.sln  make-client.py  manifest.scm  myprofile.sb.txt  plan.md  qml.qrc  qml_appstore.qrc  (+11 more)
src/libclient/: AGENTS.md  CMakeLists.txt  accountmodel.cpp  avmodel.cpp  behaviorcontroller.cpp  callInformationListModel.cpp  callInformationListModel.h  callbackshandler.cpp  callbackshandler.h  callmodel.cpp  callparticipantsmodel.cpp  codecmodel.cpp  contactmodel.cpp  containerview.h  conversationmodel.cpp  conversationmodel.cpp.orig  database.cpp  database.h  datatransfermodel.cpp  dbuserrorhandlerdefault.cpp  dbuserrorhandlerdefault.h  devicemodel.cpp  directrenderer.cpp  directrenderer.h  displayedmessagelistmodel.cpp  displayedmessagelistmodel.h  globalinstances.cpp  globalinstances.h  interaction.cpp  lrc.cpp  memorymessagelistmodel.cpp  memorymessagelistmodel.h  messagelistmodel.cpp  messagelistmodel.h  namedirectory.cpp  namedirectory.h  newaccountmodel.cpp  newcallmodel.cpp  newdevicemodel.cpp  peerdiscoverymodel.cpp  (+17 more)
src/libclient/api/: account.h  accountmodel.h  avmodel.h  behaviorcontroller.h  call.h  callmodel.h  callparticipantsmodel.h  codecmodel.h  contact.h  contactmodel.h  conversation.h  conversationmodel.h  datatransfer.h  datatransfermodel.h  devicemodel.h  interaction.h  lrc.h  member.h  messagelistmodel.h  newaccountmodel.h  newcallmodel.h  peerdiscoverymodel.h  pluginmodel.h  profile.h  video.h
src/libclient/authority/: daemon.cpp  daemon.h  storagehelper.cpp  storagehelper.h
src/libclient/dbus/: callmanager.cpp  callmanager.h  configurationmanager.cpp  configurationmanager.h  instancemanager.cpp  instancemanager.h  metatypes.h  networkservicemanager.cpp  networkservicemanager.h  pluginmanager.cpp  pluginmanager.h  presencemanager.cpp  presencemanager.h  videomanager.cpp  videomanager.h
src/libclient/interfaces/: dbuserrorhandleri.h  pixmapmanipulatori.h
src/libclient/private/: namedirectory_p.h  smartInfoHub_p.h
src/libclient/qtwrapper/: CMakeLists.txt  callmanager_wrap.h  configurationmanager_wrap.h  conversions_wrap.hpp  instancemanager.cpp  instancemanager_wrap.h  networkservicemanager_wrap.cpp  networkservicemanager_wrap.h  pluginmanager.cpp  pluginmanagerMock.cpp  pluginmanager_wrap.h  presencemanager_wrap.h  videomanager_wrap.cpp  videomanager_wrap.h
src/libclient/web-chatview/: .eslintrc.json  README  chatview.js  linkify-string.js  linkify.js  previewInfo.js
src/modern/: AccountListModel.cpp  AccountListModel.h  CMakeLists.txt  ConversationListModel.cpp  ConversationListModel.h  CoreService.cpp  CoreService.h  Main.qml  MessageListModel.cpp  MessageListModel.h  main.cpp
tests/: CMakeLists.txt
tests/features/account/: account_creation.feature  account_deletion.feature  account_import_export.feature  account_migration.feature  account_switching.feature  device_linking.feature  profile_management.feature
tests/features/api/: api_authentication.feature  api_server.feature  api_websocket.feature
tests/features/calls/: audio_calls.feature  call_controls.feature  call_recording.feature  conference_calls.feature  screen_sharing.feature  video_calls.feature
tests/features/contacts/: contact_banning.feature  contact_management.feature  contact_requests.feature  contact_search.feature
tests/features/conversations/: conversation_creation.feature  conversation_filtering.feature  conversation_members.feature  conversation_requests.feature  conversation_settings.feature
tests/features/media/: audio_devices.feature  media_codecs.feature  video_devices.feature
tests/features/messaging/: composing_indicators.feature  file_transfer.feature  message_editing.feature  message_parsing.feature  message_reactions.feature  text_messaging.feature
tests/features/plugins/: plugin_installation.feature  plugin_management.feature  plugin_store.feature
tests/features/settings/: account_settings.feature  application_settings.feature
tests/qml/: main.cpp  resources.qrc  tst_aboutpopup.qml  tst_callstackview.qml  tst_incomingcallpage.qml  tst_outgoingcallpage.qml  tst_sidepanel.qml  tst_test.qml  tst_userprofile.qml
tests/qml/src/: TestWrapper.qml  tst_AccountComboBox.qml  tst_CachedImage.qml  tst_CallButtonDelegate.qml  tst_CallMessageDelegate.qml  tst_CallPipWindow.qml  tst_CallPipWindowManager.qml  tst_ChatView.qml  tst_ChatViewFooter.qml  tst_ConferenceParticipantStrip.qml  tst_ConversationListView.qml  tst_ConversationsAdapter.qml  tst_DataTransferMessageDelegate.qml  tst_FilesToSendContainer.qml  tst_LayoutManager.qml  tst_ListSelectionView.qml  tst_LocalAccount.qml  tst_MainView.qml  (+17 more)
tests/unittests/: account_unittest.cpp  accountadapter_unittest.cpp  apiserver_unittest.cpp  apitokenmanager_unittest.cpp  callcontroldevice_unittest.cpp  calloverlaymodel_unittest.cpp  contact_unittest.cpp  conversationcalldisplay_unittest.cpp  conversationsadapter_unittest.cpp  conversationswitch_unittest.cpp  crashpadhandlerstate_unittest.cpp  crashreportclient_unittest.cpp  currentconversation_unittest.cpp  dummy_test.cpp  globaltestenvironment.h  htmlparser_unittest.cpp  main.cpp  main_unittest.cpp  mainapplication_unittest.cpp  messageparser_unittest.cpp  paste_unittest.cpp  previewengine_unittest.cpp  qmlregistration_unittest.cpp  systemtray_unittest.cpp  tst_test.h  utils_unittest.cpp  videoprovider_unittest.cpp  webengine_unittest.cpp  webengineavailability_unittest.cpp  webenginebootstrap_unittest.cpp  webengineconfig_unittest.cpp  webengineflags_unittest.cpp  webenginepreflight_unittest.cpp  webenginesupport_unittest.cpp  webengineutils_unittest.cpp
(+1912 files in other folders)
